# speller

./: .gitignore  CMakeLists.txt  README.md  dictionary.c  my error in hash.md  speller.c
